# Atomic_Habits

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time_to_complete.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_name.py
