[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["mary"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
