[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["mary"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
celery = "^5.4.0"
eventlet = "^0.36.1"
redis = "^5.0.4"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
